# auto-hyperflask

./: .build-cache.json  .replit  .replit.old  AUTOHYPERFLASK-ONE-CLICK-PLAN.md  CONTENT-COMMERCE-INTEGRATION.md  DEPLOYMENT-IMPROVEMENTS.md  Dockerfile  HANDOFF-INSTRUCTIONS.md  README.md  REPLIT-HELPER.md  RESULTS.md  SECURITY.md  STATUS.md  STRIPE-SETUP.md  build.js  config.yml  config_dev.yml  config_postgres.yml  config_prod.yml  config_sqlite.yml  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  seed_db_simple.py  shell.nix  tailwind.config.js
app/: __init__.py  models.py
app/assets/: main.css  main.js
app/pages/: index.jpy
app/pages/admin/: index.jpy
app/pages/checkout/: cancel.jpy  create-session.jpy  success.jpy
app/pages/pricing/: index.jpy
app/pages/shop/: index.jpy
app/pages/shop/cart/: add.jpy  index.jpy  remove.jpy  update.jpy
app/pages/shop/product/: [id].jpy
app/pages/timeline/: index.jpy
app/pages/webhooks/: stripe.jpy
app/services/: stripe_service.py
app/templates/: layout.html
attached_assets/: Pasted--Setup-Agent-Hyperflask-PostgreSQL-on-Replit-Your-Task-Initialize-a-Hyperflask-web-applicat-1760796295821_1760796295822.txt  Pasted-2025-10-18-14-15-50-2582-INFO-No-maxmind-db-file-found-geolocation-is-disabled-2025-10-18-14-15-1760804037992_1760804037992.txt
database/: app.db  tasks.db
scripts/: README.md  clean-macos.sh  copy-icons.js  replit-deploy.sh  replit-run.sh  replit-setup.sh  reset_db.py  seed_db.py  smart-build.js
tests/: conftest.py  test_assets.py  test_e2e_playwright.py  test_index.py  test_setup.py  test_stripe.py
tests/fixtures/: generate_test_images.py  playwright_fixtures.py  stripe_fixtures.py
