[project]
name = "my_hyperflask_app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "hyperflask >=0.5.0,<0.6.0",  # Pin to 0.5.x for forward compatibility
    "hyperflask-users",
    "periodiq", # will be installed from git while an official release is missing
    "pillow",
    "psycopg[binary]",
    "requests",
    "sqlalchemy"  # Explicit dependency for database operations
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-flask>=1.3.0",
    "pytest-asyncio",
    "ruff>=0.12.4"
]

# Optional E2E testing dependencies (requires system libraries)
e2e = [
    "pytest-playwright>=0.7.1",
    "playwright>=1.55.0"
]

# Optional Stripe payments integration
stripe = [
    "stripe>=11.0.0",
    "python-dotenv>=1.0.0"  # For local .env file support
]

[tool.uv.sources]
periodiq = { git = "https://gitlab.com/bersace/periodiq" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "public*", "database*", "attached_assets*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: End-to-end tests using Playwright (skip with: -m 'not e2e')",
    "unit: Unit tests",
    "integration: Integration tests",
]

# Playwright configuration
[tool.playwright]
browser = "chromium"
headless = true
slow_mo = 0
timeout = 30000
